--- a/Alicargo.Core/Resources/Entities.en.resx
+++ b/Alicargo.Core/Resources/Entities.en.resx
@@ -217,7 +217,7 @@
     <value>GTD</value>
   </data>
   <data name="GTDAdditional" xml:space="preserve">
-    <value>GTD-complement</value>
+    <value>GTD-extended</value>
   </data>
   <data name="INN" xml:space="preserve">
     <value>INN</value>
