renamed Gross to Weigth in contracts

--- a/Alicargo.Core/Resources/Entities.it.resx
+++ b/Alicargo.Core/Resources/Entities.it.resx
@@ -234,7 +234,7 @@
   <data name="FileName" xml:space="preserve">
     <value>File Allegato</value>
   </data>
-  <data name="Gross" xml:space="preserve">
+  <data name="Weigth" xml:space="preserve">
     <value>Peso (kg)</value>
   </data>
   <data name="Mark" xml:space="preserve">
