--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -234,7 +234,7 @@
   <data name="FileName" xml:space="preserve">
     <value>Прикрепленный файл</value>
   </data>
-  <data name="Gross" xml:space="preserve">
+  <data name="Weigth" xml:space="preserve">
     <value>Вес (кг)</value>
   </data>
   <data name="Mark" xml:space="preserve">
