--- a/Alicargo/Resources/Validation.en.resx
+++ b/Alicargo/Resources/Validation.en.resx
@@ -123,7 +123,7 @@
   <data name="LoginExists" xml:space="preserve">
     <value>Login is occupied</value>
   </data>
-  <data name="ReferenceAlreadyExists" xml:space="preserve">
+  <data name="AirWaybillAlreadyExists" xml:space="preserve">
     <value>This Air Waybill is already added</value>
   </data>
   <data name="WrongLoginOrPassword" xml:space="preserve">
