--- a/Alicargo/Resources/Validation.resx
+++ b/Alicargo/Resources/Validation.resx
@@ -123,7 +123,7 @@
   <data name="LoginExists" xml:space="preserve">
     <value>Логин занят</value>
   </data>
-  <data name="ReferenceAlreadyExists" xml:space="preserve">
+  <data name="AirWaybillAlreadyExists" xml:space="preserve">
     <value>Такой Air Way Bill уже добавлен</value>
   </data>
   <data name="WrongLoginOrPassword" xml:space="preserve">
