--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -327,19 +327,19 @@
   <data name="Country" xml:space="preserve">
     <value>Страна</value>
   </data>
-  <data name="AdditionalСost" xml:space="preserve">
+  <data name="AdditionalCost" xml:space="preserve">
     <value>Additional cost</value>
   </data>
-  <data name="BrokerСost" xml:space="preserve">
+  <data name="BrokerCost" xml:space="preserve">
     <value>Broker cost</value>
   </data>
-  <data name="CustomСost" xml:space="preserve">
+  <data name="CustomCost" xml:space="preserve">
     <value>Custom cost</value>
   </data>
-  <data name="FlightСost" xml:space="preserve">
+  <data name="FlightCost" xml:space="preserve">
     <value>Flight cost</value>
   </data>
-  <data name="ForwarderСost" xml:space="preserve">
+  <data name="ForwarderCost" xml:space="preserve">
     <value>Forwarder cost</value>
   </data>
 </root>
