edit fields on the calculation page

--- a/Alicargo/Resources/Pages.en.resx
+++ b/Alicargo/Resources/Pages.en.resx
@@ -273,4 +273,7 @@
   <data name="Users" xml:space="preserve">
     <value>Users</value>
   </data>
+  <data name="Calculation" xml:space="preserve">
+    <value>Calculation</value>
+  </data>
 </root>
