--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -411,4 +411,7 @@
   <data name="WithdrawCostEdited" xml:space="preserve">
     <value>Забор* (€)</value>
   </data>
+  <data name="Sender" xml:space="preserve">
+    <value>Отправитель</value>
+  </data>
 </root>
