--- a/Alicargo/Resources/Pages.it.resx
+++ b/Alicargo/Resources/Pages.it.resx
@@ -276,4 +276,7 @@
   <data name="Calculation" xml:space="preserve">
     <value>Cálculo</value>
   </data>
+  <data name="Client" xml:space="preserve">
+    <value>Cliente</value>
+  </data>
 </root>
