--- a/Alicargo/Resources/Mail.resx
+++ b/Alicargo/Resources/Mail.resx
@@ -268,6 +268,9 @@ Changing the status of AWB: air waybill number {0}, "added paking-list"</value>
   <data name="Awb_Set" xml:space="preserve">
     <value>Заявке {7} задана авианакладная, Аэропорт вылета: {0}/{1}, Аэропорт прилета: {2}/{3}, Вес: {4}, Количество мест: {5}. Номер накладной: {6}</value>
   </data>
+  <data name="Calculation_Subject" xml:space="preserve">
+    <value>Расчет стоимости заявки {0}</value>
+  </data>
   <data name="Client_Add" xml:space="preserve">
     <value>Добрый день, {0}! Вы зарегистрированны в системе отслеживания грузов компании  Alicargo. Имя доступа: {1}, Пароль: {2}.</value>
   </data>
