--- a/Alicargo/Resources/Pages.it.resx
+++ b/Alicargo/Resources/Pages.it.resx
@@ -279,4 +279,7 @@
   <data name="Client" xml:space="preserve">
     <value>Cliente</value>
   </data>
+  <data name="DownloadCalculations" xml:space="preserve">
+    <value>Download сalculations file</value>
+  </data>
 </root>
