--- a/Alicargo.Core/Resources/Entities.en.resx
+++ b/Alicargo.Core/Resources/Entities.en.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Address" xml:space="preserve">
     <value>Address</value>
@@ -342,9 +342,6 @@
   <data name="FlightCost" xml:space="preserve">
     <value>Flight cost (€)</value>
   </data>
-  <data name="ForwarderCost" xml:space="preserve">
-    <value>Forwarder cost (€)</value>
-  </data>
   <data name="FactureCost" xml:space="preserve">
     <value>Facture (€)</value>
   </data>
@@ -387,7 +384,7 @@
   <data name="FlightCostPerKg" xml:space="preserve">
     <value>The fare per kg (€)</value>
   </data>
-  <data name="TotalForwarderCost" xml:space="preserve">
+  <data name="TotalTransitCost" xml:space="preserve">
     <value>The cost of the forwarder (total, €)</value>
   </data>
   <data name="TotalScotchCost" xml:space="preserve">
