--- a/Alicargo.Core/Resources/Entities.it.resx
+++ b/Alicargo.Core/Resources/Entities.it.resx
@@ -420,4 +420,7 @@
   <data name="Contract" xml:space="preserve">
     <value>Contratto</value>
   </data>
+  <data name="Class" xml:space="preserve">
+    <value>Classe</value>
+  </data>
 </root>
