edit class in calculation

--- a/Alicargo.Core/Resources/Enums.en.resx
+++ b/Alicargo.Core/Resources/Enums.en.resx
@@ -123,6 +123,15 @@
   <data name="Avia" xml:space="preserve">
     <value>Avia</value>
   </data>
+  <data name="Comfort" xml:space="preserve">
+    <value>Comfort</value>
+  </data>
+  <data name="Econom" xml:space="preserve">
+    <value>Econom</value>
+  </data>
+  <data name="Lux" xml:space="preserve">
+    <value>Lux</value>
+  </data>
   <data name="Self" xml:space="preserve">
     <value>Pickup</value>
   </data>
