--- a/Alicargo.Core/Resources/Enums.it.resx
+++ b/Alicargo.Core/Resources/Enums.it.resx
@@ -112,16 +112,25 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Auto" xml:space="preserve">
     <value>Auto</value>
   </data>
   <data name="Avia" xml:space="preserve">
     <value>Air</value>
+  </data>
+  <data name="Comfort" xml:space="preserve">
+    <value>Comodità</value>
+  </data>
+  <data name="Econom" xml:space="preserve">
+    <value>Economia</value>
+  </data>
+  <data name="Lux" xml:space="preserve">
+    <value>Lusso</value>
   </data>
   <data name="Self" xml:space="preserve">
     <value>Pickup</value>
